k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: monitoreo-vue
  namespace: default
  labels:
    app: monitoreo-vue
spec:
  replicas: 1 # number of pods
  template:
    metadata:
      labels:
        app: monitoreo-vue
    spec:
      containers:
        - name: monitoreo-vue
          image: us.gcr.io/skillful-figure-271013/monitoreo-vue
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
