k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoreo-vue
spec:
  selector:
    app: monitoreo-vue
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
