k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoreo-vue-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gke-vue-solati-ip"
spec:
  backend:
    serviceName: monitoreo-vue
    servicePort: 80
